--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "core/base.html" %}
+{% extends "base.html" %}
 {% block title %}Ваши файлы всегда под рукой{% endblock %}
 {% block content %}
   <section class="hero">
